--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 
 
-
 <style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", arial}
+body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 .bgimg {
   background-position: center;
@@ -39,8 +38,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", arial}
 
 
   <!-- Header -->
-  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
+<header class="w3-container w3-center" style="padding:128px 12px" id="home">
     <h1 class="w3-jumbo"><b>iАКТУАТОР</b></h1>
+      <header class="w3-container w3-center" style="padding:128px 12px" id="home">
     <p>Интеллектуальные актуаторы </p>
     <img src="https://emiia.github.io/1/monocle1.gif" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
@@ -214,7 +214,7 @@ font-family: Times;
     
       </div>
 
-<div style="position: fixed; top: 7%; left: 2%; z-index: 1;">
+<div style="position: fixed; top: 7%; left: 5%; z-index: 1;">
   <a href="https://emiia.github.io/1/preorder.html" >
 <img src="https://iactuator.github.io/ialogo1.svg" />
 
