--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://emiia.github.io/1/monocle1.gif');
+  background-image: url('https://iactuator.github.io/ia11.svg');
   min-height: 100%;
   z-index: 2;
 }
@@ -38,15 +38,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
   <!-- Header -->
-<header class="w3-container w3-center" style="padding:128px 12px" id="home">
-    <h1 class="w3-jumbo"><b>iАКТУАТОР</b></h1>
+
       <header class="w3-container w3-center" style="padding:128px 12px" id="home">
-    <p>Интеллектуальные актуаторы </p>
-    <img src="https://emiia.github.io/1/monocle1.gif" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
-    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-      <i class="fa fa-download"></i> White Paper
-    </button>
+    <p>Интеллектуальные актуаторы</p>
+    <img src="https://iactuator.github.io/ia11.svg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+    <img src="https://iactuator.github.io/ia11.svg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
   </header>
 
   <!-- Portfolio Section -->
@@ -214,7 +210,7 @@ font-family: Times;
     
       </div>
 
-<div style="position: fixed; top: 7%; left: 5%; z-index: 1;">
+<div style="position: fixed; top: 5.5%; left: 5%; z-index: 1;">
   <a href="https://emiia.github.io/1/preorder.html" >
 <img src="https://iactuator.github.io/ialogo1.svg" />
 
