--- a/index.html
+++ b/index.html
@@ -34,20 +34,27 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Page Content -->
 <div class="w3-main w3-padding-large" style="margin-left:40%">
 
-  <!-- Menu icon to open sidebar -->
+<br/>
+<br/>
+<br/>
+
+  <!-- About Section -->
+  <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
+    <h2>ЭМИИА</h2>
+    <hr class="w3-opacity">
+    <p>Разработка и производство устройств интернета вещей на программно-аппаратной базе встраиваемых Smart контроллеров и модулей MONOCLE с интегрированным самообновляющимся ПО и автономной нейронной сетью для задач автоматизации и машинного зрения на принципах когнитивной радиооптики.</p>
+
 
 
   <!-- Header -->
-
-      <header class="w3-container w3-center" style="padding:128px 12px" id="home">
-    <p>Интеллектуальные актуаторы</p>
-    <img src="https://iactuator.github.io/ia11.svg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
-    <img src="https://iactuator.github.io/ia11.svg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
+    <img src="" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+  <br/>
+    <img src="" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
   </header>
 
   <!-- Portfolio Section -->
   <div class="w3-padding-32 w3-content" id="portfolio">
-    <h2 class="w3-text-grey">My Portfolio</h2>
+    <h2 class="w3-text-grey">Актуаторы</h2>
     <hr class="w3-opacity">
 
     <!-- Grid for photos -->
