--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   
   <br/>
 <br/>
-   <br/>
+  <br/>
 <br/>
   
   
@@ -65,16 +65,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/sailboat.jpg" style="width:100%">
+        <img src="https://iactuator.github.io/ia6.jpg" style="width:100%">
+        <img src="https://iactuator.github.io/ia7.jpg" style="width:100%">
+        <img src="https://iactuator.github.io/ia8.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-        <img src="/w3images/chef.jpg" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/p6.jpg" style="width:100%">
+        <img src="https://iactuator.github.io/ia10.jpg" style="width:100%">
+        <img src="https://www.w3schools.com/w3images/chef.jpg" style="width:100%">
+        <img src="https://iactuator.github.io/ia3.png" style="width:100%">
+        
       </div>
     <!-- End photo grid -->
     </div>
