--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
       <div class="w3-half">
         <img src="https://iactuator.github.io/ia10.jpg" style="width:100%">
-        <img src="https://www.w3schools.com/w3images/chef.jpg" style="width:100%">
-        <img src="https://iactuator.github.io/ia3.png" style="width:100%">
+        <img src="https://iactuator.github.io/ia8.jpg" style="width:100%">
+        <img src="https://iactuator.github.io/ia9.jpg" style="width:100%">
         
       </div>
     <!-- End photo grid -->
