--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
       <div class="w3-half">
         <img src="https://iactuator.github.io/ia6.jpg" style="width:100%">
         <img src="https://iactuator.github.io/ia7.jpg" style="width:100%">
-        <img src="https://iactuator.github.io/ia8.jpg" style="width:100%">
+        <img src="https://iactuator.github.io/ia3.png" style="width:100%">
       </div>
 
       <div class="w3-half">
