--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ function closeNav() {
 
 
 
-  <!-- About Section -->
+  <!-- Section END -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2></h2>
     <hr class="w3-opacity">
@@ -302,7 +302,7 @@ function closeNav() {
 <br/>
 <br/>
 
-<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru/p/information-economy.html" target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:0px; color:#000000; background-color:#ffffff; border-radius:5px; border: 0px solid #000000;">О НАС/КОНТАКТЫ</a></p>
+<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru/p/information-economy.html" target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:5px; border: 0px solid #000000;">О НАС/КОНТАКТЫ</a></p>
 
 <p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru/p/emiia.html" target="_self" style="cursor: pointer;  font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:5px; border: 0px solid #000000;">СМИ О ПРОЕКТЕ</a></p>
 
@@ -336,16 +336,16 @@ function closeNav() {
 </div>
 
 
+<br/>
+<br/>
 
-<p class="buttond"  style="text-align: left;"><a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">Terms</a><a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">Privacy</a><a href="https://www.emiia.ru/p/confidentiality.html"
+<p class="buttond"  style="text-align: left;">
+<a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
+<a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">Terms</a>
+<a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">Privacy</a>
+<a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">Security</a>
 
-<br/>
-
-<br/>
-
-<p class="buttond"  style="text-align: left;"><a href="https://www.emiia.ru/p/white-paper.html" target="_self" style="cursor: pointer;  font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">2019 iACTUATOR</a></p>
-
-<br/></p></div></div>
