--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   background-size: cover;
   background-image: url('https://iactuator.github.io/ia12.png');
   min-height: 100%;
-  z-index: 2;
 }
 </style>
 <body>
@@ -25,7 +24,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 <!-- Sidebar with image -->
 <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
-  <div class="bgimg" z-index="2"></div>
+  <div class="bgimg"></div>
   
 </nav>
   
@@ -196,7 +195,7 @@ border-radius:10px;
 border: 3px solid #ffffff;
  line-height: 20px;
     overflow: none;
-    box-shadow: 10px 10px 1000px 2500px rgba(255,255,255,255.255);
+    box-shadow: 50px 50px 1000px 2500px rgba(255,255,255,255.255);
     }
 .menu {
     
@@ -276,6 +275,10 @@ display: inline-block;
 <div class="buttond" style="text-align: left">
 <a href="https://emiia.github.io/1/login.html" style="background-color: white; border-radius: 3px; border: 0px solid #000000; color: #4A99D9 cursor: pointer; font-size: 8px; padding: 4px; text-decoration: none;" target="_self">&#160;&#160;ВХОД | РЕГИСТРАЦИЯ-ТЕСТОВЫЙ АККАУНТ</a>
 
+<br/>
+<br/>
+<br/>
+<br/>
 <br/>
 <br/>
 <br/>
