--- a/index.html
+++ b/index.html
@@ -160,22 +160,22 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <a href="https://github.com/EMIIA"><img alt="EMIIA GitHub" border="0" data-original-height="140" data-original-width="280" src="https://emiia.github.io/1/emiia10.svg" title="EMIIA" /></a></div>
 
 
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
 
-<br/>
-<br/>
-<br/>
-<br/>
 
-
-<p class="buttond"  style="text-align: left;">
+  <a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color: 	transparent; border-radius:15px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Terms</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">Terms</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Privacy</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">Privacy</a>
-<a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer;   font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">Security</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Security</a>
 
 
 
@@ -303,35 +303,19 @@ display: inline-block;
   </script>
 
 
+  <br/>
+<br/>
+<br/>
 
-</!doctype>
-    
-      </div>
+  
+
+  
+  
 
 <div style="position: fixed; top: 5.5%; left: 6%; z-index: 1;">
   <a href="https://emiia.github.io/1/preorder.html" >
 <img src="https://iactuator.github.io/ialogo1.svg" />
 
 
-  </a>
-</div>
-  </div>
 
-  </div>  
-  
- 
-</div>
 
-<script>
-// Open and close sidebar
-function openNav() {
-  document.getElementById("mySidebar").style.width = "60%";
-  document.getElementById("mySidebar").style.display = "block";
-}
-function closeNav() {
-  document.getElementById("mySidebar").style.display = "none";
-}
-</script>
-
-</body>
-</html>
