--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
   <div class="bgimg"></div>
   
-</nav>
-  
+
+  </nav>
     
 
 
@@ -168,7 +168,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <br/>
 
 
-  <a href="https://www.emiia.ru/p/confidentiality.html"
+<p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color: 	transparent; border-radius:15px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Terms</a>
@@ -312,10 +312,6 @@ display: inline-block;
   
   
 
-<div style="position: fixed; top: 5.5%; left: 6%; z-index: 1;">
-  <a href="https://emiia.github.io/1/preorder.html" >
+<div style="position: fixed; top: 5.5%; left: 6%; ">
+  <a href="https://emiia.ru" >
 <img src="https://iactuator.github.io/ialogo1.svg" />
-
-
-
-
