--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@ border: 3px solid #ffffff;
  line-height: 20px;
     overflow: none;
     box-shadow: 50px 50px 1000px 2500px rgba(255,255,255,255.255);
+    z-index: 1;
     }
 .menu {
     
@@ -312,6 +313,6 @@ display: inline-block;
   
   
 
-<div style="position: fixed; top: 5.5%; left: 6%; ">
+<div style="position: fixed; top: 5.5%; left: 6%; z-index: 1;">
   <a href="https://emiia.ru" >
 <img src="https://iactuator.github.io/ialogo1.svg" />
