--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  <br/>
  <br/>
   
-<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru" target="_self" style="cursor: pointer;  font-size:17px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">Интеллектуальные актуаторы</a></p>
+<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru" target="_self" style="cursor: pointer;  font-size:13px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">ИНТЕЛЛЕКТУАЛЬНЫЕ АКТУАТОРЫ</a></p>
   <br/>
    <br/>
 
@@ -119,7 +119,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     
 
 </div>
-<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru/p/white-paper.html" target="_self" style="cursor: pointer;  font-size:15px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">→ ПОДРОБНЕЕ</a></p>
+<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru/p/white-paper.html" target="_self" style="cursor: pointer;  font-size:13px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">→ ПОДРОБНЕЕ</a></p>
 
 <br/>
 <br/>
@@ -177,6 +177,8 @@ target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-
 target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Privacy</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Security</a>
+<a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Help</a>
 
 
 
@@ -309,7 +311,10 @@ display: inline-block;
 <br/>
 <br/>
 
- 
+  
+
+  
+  
 
 <div style="position: fixed; top: 5.5%; left: 7%; z-index: 1;">
   <a href="https://emiia.ru" >
