--- a/index.html
+++ b/index.html
@@ -162,23 +162,24 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
 
 
-<p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color: 	transparent; border-radius:15px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
+
+          </div>
+          </div>
+          </div>
+      <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Terms</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Terms</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Privacy</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Privacy</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Security</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Security</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:	transparent; border-radius:15px; border: 0px solid #000000;">Help</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Help</a>
+    </div>
+
 
 
 
