--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         Happy Clients
       </div>
       <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">150+</span><br>
-        Meetings
+        <span class="w3-xlarge">10 %</span><br>
+        Электроэнергии
       </div>
     </div>
+    
 
 
   <!-- About Section -->
@@ -179,6 +180,7 @@ target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-
 <a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Help</a>
     </div>
+
 
 
 
@@ -306,8 +308,7 @@ display: inline-block;
       menuElem.classList.toggle('open');
     };
   </script>
-
-
+  
+  
 <div style="position: fixed; top: 6%; left: 7%; z-index: 1;">
-  <a href="https://emiia.ru" >
 <img src="https://iactuator.github.io/ialogo1.svg" />
