--- a/index.html
+++ b/index.html
@@ -185,6 +185,13 @@ target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-
 
 
 
+</div>  
+<div style="position: fixed; top: 6%; left: 7%; z-index: 1;">
+<img src="https://iactuator.github.io/ialogo1.svg" /></div>
+
+
+
+
 <!doctype html>
   
  <style>
@@ -249,7 +256,7 @@ display: inline-block;
 <br/>
 
 
-<p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/" target="_self" style="cursor: pointer; font-size:12px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:3px; border: 0px solid #000000;">ГЛАВНАЯ</a></p>
+<p class="buttond"  style="text-align: left"><a href="https://upload.emiia.ru/" target="_self" style="cursor: pointer; font-size:12px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:3px; border: 0px solid #000000;">ГЛАВНАЯ</a></p>
 
 
 <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/information-economy.html" target="_self" style="cursor: pointer; font-size:12px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:3px; border: 0px solid #000000;">О НАС/КОНТАКТЫ</a></p>
@@ -308,7 +315,3 @@ display: inline-block;
       menuElem.classList.toggle('open');
     };
   </script>
-  
-  
-<div style="position: fixed; top: 6%; left: 7%; z-index: 1;">
-<img src="https://iactuator.github.io/ialogo1.svg" />
