--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           </div>
           </div>
           </div>
-      <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
+
 <a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Terms</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
@@ -179,7 +178,19 @@ target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-
 target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Security</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Help</a>
+<a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Blog</a>
+<a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">GitHub</a>
+<a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">About</a>
+<a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">White Paper</a>
     </div>
+    
+          <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: left;  font-size:11px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
+
 
 
 
