--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  <br/>
  <br/>
   
-<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru" target="_self" style="cursor: pointer;  font-size:16px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">ИНТЕЛЛЕКТУАЛЬНЫЕ АКТУАТОРЫ</a></p>
+<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru" target="_self" style="cursor: pointer;  font-size:15px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">ИНТЕЛЛЕКТУАЛЬНЫЕ АКТУАТОРЫ</a></p>
   <br/>
  
 
@@ -195,8 +195,8 @@ target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  tex
 
 
   
-<div style="position: fixed; top: 6%; left: 7%; z-index: 1;">
-<img src="https://iactuator.github.io/ialogo1.svg" /></div>
+<div style="position: fixed; top: 6%; left: 7%; z-index: +3;">
+<a href="https://upload.emiia.ru/"><img alt="iACTUATOR" src="https://iactuator.github.io/ialogo1.svg" style="background-color: white; font-family: &quot;times new roman&quot;; font-weight: 700;" title="Home" /></a></div>
 
 
 
@@ -330,4 +330,4 @@ display: inline-block;
          <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
 </div>
-  
+ 
