--- a/index.html
+++ b/index.html
@@ -172,23 +172,23 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
   
   <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Terms</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Terms</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Privacy</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Privacy</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Security</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Security</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Help</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Help</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Blog</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Blog</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">GitHub</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">GitHub</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">About</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">About</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Press</a>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Press</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">White Paper</a></div>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">White Paper</a></div>
 
     
 
@@ -330,4 +330,3 @@ display: inline-block;
          <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
 </div>
- 
