--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  <br/>
  <br/>
   
-<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru" target="_self" style="cursor: pointer;  font-size:15px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">ИНТЕЛЛЕКТУАЛЬНЫЕ АКТУАТОРЫ</a></p>
+<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru" target="_self" style="cursor: pointer;  font-size:15px;  text-decoration: none; padding:0px; color:#4A99D9; background-color: transparent; border-radius:0px; border: 0px solid #000000;">ИНТЕЛЛЕКТУАЛЬНЫЕ АКТУАТОРЫ</a></p>
   <br/>
  
 
@@ -56,6 +56,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h2>80 %</h2>
     <hr class="w3-opacity">
     <p>Разработка и производство устройств интернета вещей на программно-аппаратной базе встраиваемых Smart контроллеров и модулей MONOCLE с интегрированным самообновляющимся ПО и автономной нейронной сетью для задач автоматизации и машинного зрения на принципах когнитивной радиооптики.</p>
+    
+
+<div style="text-align: center;">
+</div>
+<div style="text-align: center;">
+<img alt="ЭМИИА" border="0" data-original-height="350" data-original-width="1400" height="400" src="https://emiia.github.io/1/monocle1.gif" style="font-family: &quot;times new roman&quot;;" title="ЭМИИА" width="400" />
   
     
       <!-- About Section -->
@@ -330,3 +336,4 @@ display: inline-block;
          <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
 </div>
+  
