--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div style="text-align: center;">
 </div>
 <div style="text-align: center;">
-<img alt="ЭМИИА" border="0" data-original-height="350" data-original-width="1400" height="400" src="https://emiia.github.io/1/monocle1.gif" style="font-family: &quot;times new roman&quot;;" title="ЭМИИА" width="400" />
+<img alt="ЭМИИА"  width="350" src="https://emiia.github.io/1/monocle1.gif"/>
   
     
       <!-- About Section -->
