--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div style="text-align: center;">
 </div>
 <div style="text-align: center;">
-<img alt="ЭМИИА"  width="350" src="https://emiia.github.io/1/monocle1.gif"/>
+<img alt="ЭМИИА"  width="340" src="https://emiia.github.io/1/monocle1.gif"/>
   
     
       <!-- About Section -->
@@ -202,7 +202,7 @@ target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-
 
   
 <div style="position: fixed; top: 6%; left: 7%; z-index: +3;">
-<a href="https://upload.emiia.ru/"><img alt="iACTUATOR" src="https://iactuator.github.io/ialogo1.svg" style="background-color: white; font-family: &quot;times new roman&quot;; font-weight: 700;" title="Home" /></a></div>
+<a href="https://upload.emiia.ru/"><img alt="iACTUATOR" src="https://iactuator.github.io/ialogo1.svg" style="background-color: transparent; font-family: &quot;times new roman&quot;; font-weight: 700;" title="Home" /></a></div>
 
 
 
@@ -336,4 +336,3 @@ display: inline-block;
          <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
 </div>
-  
