--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <div style="text-align: center;">
 </div>
 <div style="text-align: center;">
-<img alt="ЭМИИА"  width="340" src="https://emiia.github.io/1/monocle1.gif"/>
+<img alt="ЭМИИА"  width="340" height="350" src="https://emiia.github.io/1/monocle1.gif"/>
   
     
       <!-- About Section -->
@@ -336,3 +336,4 @@ display: inline-block;
          <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
 </div>
+  
