--- a/index.html
+++ b/index.html
@@ -57,9 +57,52 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <hr class="w3-opacity">
     <p>Разработка и производство устройств интернета вещей на программно-аппаратной базе встраиваемых Smart контроллеров и модулей MONOCLE с интегрированным самообновляющимся ПО и автономной нейронной сетью для задач автоматизации и машинного зрения на принципах когнитивной радиооптики.</p>
     
+  
+  
+  
+  <!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+
+<h2>The picture Element</h2>
+
+  <div style="text-align: center;">
+<div style="text-align: center;"> 
+<picture>
+  <source media="(min-width: 800px)" srcset="https://iactuator.github.io/800.png">
+  <source media="(min-width: 480px)" srcset="https://iactuator.github.io/480.png">
+  <img src="https://iactuator.github.io/320.png" alt="Flowers" style="width:320;">
+</picture>
+
+<p>Resize the browser to see different versions of the picture loading at different viewport sizes.
+The browser looks for the first source element where the media query matches the user's current viewport width,
+and fetches the image specified in the srcset attribute.</p>
+
+<p>The img element is required as the last child tag of the picture declaration block.
+The img element is used to provide backward compatibility for browsers that do not support the picture element, or if none of the source tags matched.
+</p>
+
+<p><strong>Note:</strong> The picture element is not supported in IE12 and earlier or Safari 9.0 and earlier.</p>
+
+</body>
+</html>
+
+
+
+
+  
+  
+
+
+
+
+</div>
+    
 
 <div style="text-align: center;">
-</div>
 <div style="text-align: center;">
 <img alt="ЭМИИА"  width="320" height="320" src="https://emiia.github.io/1/monocle1.gif"/>
   
