--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ body {
   content: '';
   position: absolute;
   z-index: -2;
-  width: 6px;
+  width: 2px;
   background-color: black;
   top: 0;
   bottom: 0;
@@ -284,11 +284,13 @@ body {
 /* The actual content */
 .content {
   padding: 20px 30px;
-  background-color: white;
+  background-color: #616161;
+  color: white;
   z-index: -2;
   position: relative;
-  border: medium solid black;
+  border: medium solid white;
   border-radius: 15px;
+ 
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
@@ -333,37 +335,37 @@ body {
   <div class="container left">
     <div class="content">
       <h2>2017</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <p>Lorem ipsum dolor sit amet.</p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
       <h2>2016</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci,</p>
     </div>
   </div>
   <div class="container left">
     <div class="content">
       <h2>2015</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <p>Lorem ipsum </p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
       <h2>2012</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <p>Lorem ipsum dolor sit amet, quo ei simul</p>
     </div>
   </div>
   <div class="container left">
     <div class="content">
       <h2>2011</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <p>Lorem ipsum dolor sit amet, quo ei </p>
     </div>
   </div>
   <div class="container right">
     <div class="content">
       <h2>2007</h2>
-      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+      <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto.</p>
     </div>
   </div>
 </div>
@@ -581,11 +583,10 @@ display: inline-block;
   </script>
 
 
+<br/>
+<br/>
 
 
-
-
-         </div>
          <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: center;  font-size:11px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR</a>
 </div>
