--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ body {
   position: absolute;
   z-index: -2;
   width: 0.9px;
-  background-color: #4A99D9;
+  background-color: #A4CBEB;
   top: 0;
   bottom: 0;
   left: 50%;
