--- a/index.html
+++ b/index.html
@@ -474,10 +474,10 @@ target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-
       margin:-30px;
       list-style: none;
 font-family: "Montserrat", sans-serif;
-      padding-right: auto;
+      padding-right: 320;
       display: none;
   position: auto;
-    min-width: 340px;
+    min-width: 320px;
 border-radius:20px; 
 border: 0px solid #ffffff;
  line-height: -20px;
