--- a/index.html
+++ b/index.html
@@ -481,6 +481,7 @@ font-family: "Montserrat", sans-serif;
 border-radius:20px; 
 border: 0px solid #ffffff;
  line-height: -20px;
+       line-width: -20px;
 background-color: white;
     box-shadow: 50px 50px 1000px 2500px rgba(255,255,255,255.255);
     z-index: +2;
