--- a/index.html
+++ b/index.html
@@ -628,3 +628,8 @@ function closeNav() {
 
   </a>
 </div>
+
+
+         <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: center;  font-size:9px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 iACTUATOR — ИНТЕЛЛЕКТУАЛЬНЫЕ АКТУАТОРЫ</a>
+</div>
