--- a/index.html
+++ b/index.html
@@ -389,6 +389,14 @@ body {
 </div>
 
 
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -433,8 +441,9 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
-  background-color: #444;
-  color: white;
+  background-color: white;
+  color: #4A99D9;
+    border-radius: 3px;
 }
 
 .fa {font-size:50px;}
@@ -442,8 +451,8 @@ body {
 </head>
 <body>
 
-<h2>Responsive Section Counter</h2>
-<p>Resize the browser window to see the effect.</p>
+<h2>Интеллектуальные актуаторы</h2>
+<p>Электромеханические и электронные решения.</p>
 <br>
 
 <div class="row">
@@ -482,6 +491,11 @@ body {
 
 </body>
 </html>
+
+
+
+
+
 
 
 
@@ -547,8 +561,12 @@ target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-
 target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">About</a>
 <a href="https://www.emiia.ru/p/confidentiality.html"
 target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Press</a>
+
 <a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">White Paper</a></div>
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">White Paper</a>
+
+<a href="https://www.emiia.ru/p/confidentiality.html"
+target="_self" style="cursor: pointer; text-align: left;  font-size:13px;  text-decoration: none; padding:5px; color:#4A99D9; background-color:	transparent; border-radius:10px; border: 0px solid #000000;">Pre Order</a></div>
 
     
 
