--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@ body {
   padding: 16px;
   text-align: center;
   background-color: white;
-  color: #4A99D9;
+  color: #616161;
     border-radius: 3px;
 }
 
