--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@ function closeNav() {
 
 <div style="position: fixed; top: 5.5%; left: 5%; z-index: +1;">
   <a href="https://emiia.github.io/1/preorder.html" title="ЭМИИА">
-<img src="https://iactuator.github.io/ialogo1.svg" />
+<img src="https://emiia.github.io/emiiablog.svg" />
 
 
   </a>
