--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
    
 
 </div>
-<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru/p/white-paper.html" target="_self" style="cursor: pointer;  font-size:13px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">→ ПОДРОБНЕЕ</a></p>
+<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru" target="_self" style="cursor: pointer;  font-size:13px;  text-decoration: none; padding:8px; color:#4A99D9; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">→ ПОДРОБНЕЕ</a></p>
 
 <br/>
 <br/>
