--- a/emonocle.html
+++ b/emonocle.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>ЭМИИА | EMIIA</title>
+<title>EMIIA</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -113,7 +113,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
   <!-- About Section -->
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
-    <h2>ЭМИИА</h2>
+    <h2>EMIIA</h2>
     <hr class="w3-opacity">
     <p>Разработка и производство устройств интернета вещей на программно-аппаратной базе встраиваемых Smart контроллеров и модулей MONOCLE с интегрированным самообновляющимся ПО и автономной нейронной сетью для задач автоматизации и машинного зрения на принципах когнитивной радиооптики.</p>
     
@@ -183,7 +183,7 @@ font-family: Times;
 
 <br/>
 <div style="text-align: left;">
-&#160;<img alt="ЭМИИА" src="https://emiia.github.io/1/monocle12.svg" style="font-family: &quot;times new roman&quot;;" title="" /></div>
+&#160;<img alt="EMIIA" src="https://emiia.github.io/1/monocle12.svg" style="font-family: &quot;times new roman&quot;;" title="" /></div>
 <br/>
 <br/>
 <br/>
@@ -307,7 +307,7 @@ function closeNav() {
 <br/>
 
 <div dir="ltr" style="text-align: center;" trbidi="on">
-<iframe class="background-image" frameborder="0" height="50" marginheight="0" marginwidth="0" src="https://emiia.github.io/1/monoclevideo.html" width="50">ЭМИИА</iframe>
+<iframe class="background-image" frameborder="0" height="50" marginheight="0" marginwidth="0" src="https://emiia.github.io/1/monoclevideo.html" width="50">EMIIA</iframe>
 
 <br/>
 
@@ -337,6 +337,6 @@ target="_self" style="cursor: pointer;   font-size:9px;  text-decoration: none; 
 
 <br/>
 
-<p class="buttond"  style="text-align: left;"><a href="https://www.emiia.ru/p/white-paper.html" target="_self" style="cursor: pointer;  font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">2019 iACTUATOR</a></p>
+<p class="buttond"  style="text-align: left;"><a href="https://www.emiia.ru/p/white-paper.html" target="_self" style="cursor: pointer;  font-size:11px;  text-decoration: none; padding:8px; color:#000000; background-color:#ffffff; border-radius:15px; border: 0px solid #000000;">EMIIA</a></p>
 
 <br/></p></div></div>
