--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>ЭМИИА | EMIIA</title>
+<title>EMIIA</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -45,7 +45,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  <br/>
  <br/>
   
-<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru" target="_self" style="cursor: pointer;  font-size:25px;  text-decoration: none; padding:0px; color:#4A99D9; background-color: transparent; border-radius:0px; border: 0px solid #000000;">ЭМИИА</a></p>
+<p class="buttond"  style="text-align: center;"><a href="https://www.emiia.ru" target="_self" style="cursor: pointer;  font-size:25px;  text-decoration: none; padding:0px; color:#4A99D9; background-color: transparent; border-radius:0px; border: 0px solid #000000;">EMIIA</a></p>
   <br/>
  
 
@@ -80,7 +80,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <p>EMIIA
 </p>
 
-<p><strong>ЭМИИА</strong></p>
+<p><strong>EMIIA</strong></p>
 
 </body>
 </html>
@@ -99,7 +99,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 <div style="text-align: center;">
 <div style="text-align: center;">
-<img alt="ЭМИИА"  width="320" height="320" src="https://emiia.github.io/1/monocle1.gif"/>
+<img alt="EMIIA"  width="320" height="320" src="https://emiia.github.io/1/monocle1.gif"/>
   
     
       <!-- About Section -->
@@ -156,7 +156,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <br/>
 
 <div dir="ltr" style="text-align: center;" trbidi="on">
-<iframe class="background-image" frameborder="0" height="50" marginheight="0" marginwidth="0" src="https://emiia.github.io/1/monoclevideo.html" width="50">ЭМИИА</iframe>
+<iframe class="background-image" frameborder="0" height="50" marginheight="0" marginwidth="0" src="https://emiia.github.io/1/monoclevideo.html" width="50">EMIIA</iframe>
 
 <br/>
 
@@ -365,7 +365,7 @@ function closeNav() {
 <br/>
 
 <div style="position: fixed; top: 6.5%; left: 5.5%; z-index: +1;">
-  <a href="https://emiia.github.io/1/preorder.html" title="ЭМИИА">
+  <a href="https://emiia.github.io/1/preorder.html" title="EMIIA">
 <img src="https://emiia.github.io/emiiablog.svg" />
 
 
@@ -374,6 +374,6 @@ function closeNav() {
 
 
          <p class="buttond"  style="text-align: left"><a href="https://www.emiia.ru/p/confidentiality.html"
-target="_self" style="cursor: pointer; text-align: center;  font-size:9px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© 2019 ЭМИИА | EMIIA</a>
+target="_self" style="cursor: pointer; text-align: center;  font-size:9px;  text-decoration: none; padding:3px; color:#000000; background-color: 	transparent; border-radius:10px; border: 0px solid #000000;">© EMIIA | EMIIA</a>
 </div>
 
