--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://iactuator.github.io/ia12.png');
+  background-image: url('https://upload.emiia.ru/monocle9.png');
   min-height: 100%;
 }
 </style>
@@ -38,9 +38,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
   <!-- Header -->
-    <img src="https://iactuator.github.io/ia12.png" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+    <img src="https://upload.emiia.ru/monocle9.png" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
   <br/>
-    <img src="https://iactuator.github.io/ia12.png" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
+    <img src="https://upload.emiia.ru/monocle9.png" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
   </header>
  
  <br/>
@@ -56,7 +56,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2></h2>
     <hr class="w3-opacity">
-    <p>Разработка и производство устройств интернета вещей на программно-аппаратной базе встраиваемых Smart контроллеров и модулей MONOCLE с интегрированным самообновляющимся ПО и автономной нейронной сетью для задач автоматизации и машинного зрения на принципах когнитивной радиооптики.</p>
+    <p>
+ <p>— Встраиваемые smart контроллеры и ПО (автомобили, машины, оборудование, устройства);</p>
+
+ <p>— Машинное зрение (когнитивная радиооптика);</p>
+
+<p>— Телекоммуникационные вычислительные системы (беспроводные технологии, туманные/периферийные вычисления).</p>
+
     
   
   
