--- a/emonocle.html
+++ b/emonocle.html
@@ -14,7 +14,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url('https://iactuator.github.io/ia12.png');
+  background-image: url('https://upload.emiia.ru/monocle9.png');
   min-height: 100%;
   z-index: 2;
 }
@@ -38,9 +38,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
   <!-- Header -->
-    <img src="https://iactuator.github.io/ia12.png" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
+    <img src="https://upload.emiia.ru/monocle9.png" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
   <br/>
-    <img src="https://iactuator.github.io/ia12.png" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
+    <img src="https://upload.emiia.ru/monocle9.png" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
   </header>
   
   <br/>
