--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <title>EMIIA</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="refresh" content="0;https://www.emiia.ru">
-  <meta name="google-site-verification" content="nlXisRKGZbZ5jSGB1dkBkFVxzgX13T1S01VbIztWT5c" />
+<meta http-equiv="refresh" content="-1;https://www.emiia.ru">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 
-
+<!--  --><script type="text/javascript">
+    window.location.href = "https://www.emiia.ru";
+</script>
+  
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
