--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta https-equiv="refresh" content="-1;URL=https://www.emiia.ru" />
+  
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 
-
+<script type="text/javascript"> 
+location="https://www.emiia.ru";
+</script>
   
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
