--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="https://emiia.github.io/emiia.ico" type="image/x-icon">
 <title></title>
   <meta name="yandex" content="none"/>
 
