--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <link rel="icon" href="https://emiia.github.io/emiia.ico" type="image/x-icon">
+  <link rel="icon" type="image/x-icon" href="https://emiia.github.io/emiia.ico" />
+  
 <title></title>
   <meta name="yandex" content="none"/>
 
