--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="icon" href="https://emiia.github.io/emiia.ico" type="image/x-icon">
   <link rel="icon" type="image/x-icon" href="https://emiia.github.io/emiia.ico" />
+  <link rel="icon" type="image/ico" href="/emiia.ico" />
   
 <title></title>
   <meta name="yandex" content="none"/>
