--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="icon" href="https://emiia.github.io/emiia.ico" type="image/x-icon">
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="-1; url=https://www.emiia.ru">
+        <script type="text/javascript">
+            window.location.href = "https://www.emiia.ru"
+        </script>
+      
+        <link rel="icon" href="https://emiia.github.io/emiia.ico" type="image/x-icon">
   <link rel="icon" type="image/x-icon" href="https://emiia.github.io/emiia.ico" />
   <link rel="icon" type="image/ico" href="/emiia.ico" />
-  
-<title></title>
-  <meta name="yandex" content="none"/>
+        <title></title>
+    </head>
+    <body>
 
-  <meta https-equiv="refresh" content="-1;URL=https://www.emiia.ru" />
-</head>
-<body>
-
-</body>
+    </body>
 </html>
