--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
+        <meta name="yandex" content="none"/>
         <meta http-equiv="refresh" content="-1; url=https://www.emiia.ru">
         <script type="text/javascript">
             window.location.href = "https://www.emiia.ru"
