--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="yandex" content="none"/>
         <meta http-equiv="refresh" content="-1; url=https://www.emiia.ru">
+        <meta name="yandex-verification" content="eb56ad98f4fd3aa3" />
         <script type="text/javascript">
             window.location.href = "https://www.emiia.ru"
         </script>
